Connect WorkSheet API